# winr-rs

./: Cargo.toml  LICENSE  README.md
src/: application.rs  lib.rs
src/input/: enums.rs  mod.rs
src/platform_impl/: mod.rs
src/platform_impl/windows/: application.rs  mod.rs  virtual_key.rs  win32.rs  window.rs
