[package]
edition = "2021"
name = "winr"
version = "0.0.0-alpha.1"
description = "A windowing library."
authors = ["Jacob R. Green"]
repository = "github.com/jacobrgreen114/winr-rs"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"


[dependencies]
lazy_static = { version = "1.4.0", features = [] }
eventify = { path = "../eventify", version = "0.0.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }